change project name and add travis

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ python-decouple = "*"
 django-compressor = "*"
 django-compressor-toolkit = "*"
 django-npm = "*"
+"flake8" = "*"
+coverage = "*"
+python-coveralls = "*"
 
 [dev-packages]
 ipdb = "*"
