--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src/static/js/**/*"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint": "^5.9.0"
   }
 }
