--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint": "^5.9.0"
+    "autoprefixer": "^9.3.1",
+    "eslint": "^5.9.0",
+    "node-sass": "^4.10.0",
+    "postcss": "^7.0.5",
+    "postcss-cli": "^6.0.1"
   }
 }
