--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "^5.9.0",
     "node-sass": "^4.10.0",
     "postcss": "^7.0.5",
-    "postcss-cli": "^6.0.1"
+    "postcss-cli": "^6.0.1",
+    "postcss-font-magician": "^2.2.1"
   }
 }
