Send suggestion done
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ django-extensions = "*"
 djangorestframework = "*"
 django-filter = "*"
 django-compressor-toolkit = "*"
+django-js-reverse = "*"
 
 [dev-packages]
 ipdb = "*"
