--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^9.3.1",
     "eslint": "^5.9.0",
     "jquery": "^3.3.1",
+    "jquery-ui-dist": "^1.12.1",
     "list.js": "^1.5.0",
     "node-sass": "^4.10.0",
     "postcss": "^7.0.5",
