Add color to theme and update api
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ djangorestframework = "*"
 django-filter = "*"
 django-compressor-toolkit = "*"
 django-js-reverse = "*"
+django-colorful = "*"
 
 [dev-packages]
 ipdb = "*"
