Add methods to fetch data on CD API
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ django-js-reverse = "*"
 django-colorful = "*"
 django-constance = "*"
 django-picklefield = "*"
+requests = "*"
 
 [dev-packages]
 ipdb = "*"
