Add fetch document info action on admin
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,7 @@ django-filter = "*"
 django-compressor-toolkit = "*"
 django-js-reverse = "*"
 django-colorful = "*"
-django-constance = "*"
+django-constance = {extras = ["database"]}
 django-picklefield = "*"
 requests = "*"
 
