Feature/check document infos (#40)
* Add new models to persist CD infos

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add django-constance

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix js-overlay click (#37)

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add methods to fetch data on CD API

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add fetch document info action on admin

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add translations

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,9 @@ django-filter = "*"
 django-compressor-toolkit = "*"
 django-js-reverse = "*"
 django-colorful = "*"
+django-constance = {extras = ["database"]}
+django-picklefield = "*"
+requests = "*"
 
 [dev-packages]
 ipdb = "*"
