Add gunicorn to pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ django-constance = {extras = ["database"]}
 django-picklefield = "*"
 requests = "*"
 "psycopg2" = "*"
+gunicorn = "*"
 
 [dev-packages]
 ipdb = "*"
