--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+ngrok
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
