--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "jquery-ui-dist": "^1.12.1",
     "list.js": "^1.5.0",
     "node-sass": "^4.10.0",
+    "popper.js": "^1.14.6",
     "postcss": "^7.0.5",
     "postcss-cli": "^6.0.1",
-    "postcss-font-magician": "^2.2.1"
+    "postcss-font-magician": "^2.2.1",
+    "tooltip.js": "^1.3.1"
   }
 }
