--- a/app.json
+++ b/app.json
@@ -8,6 +8,12 @@
     },
     {
       "url": "heroku/python"
+    },
+    {
+      "url": "https://github.com/grauwoelfchen/heroku-buildpack-gettext.git"
+    },
+    {
+      "url": "https://github.com/labhackercd/new-wikilegis.git"
     }
   ],
   "env": {
