--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery-ui-dist": "^1.12.1",
     "list.js": "^1.5.0",
     "node-sass": "^4.10.0",
+    "particles.js": "^2.0.0",
     "popper.js": "^1.14.6",
     "postcss": "^7.0.5",
     "postcss-cli": "^6.0.1",
