Fix eslint errors
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "lint": "eslint src/static/js/**/*"
   },
+  "eslintIgnore": [
+    "src/static/js/vendor/*"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
