Feature/text editor (#108)
* Create project flow

* Add participation button

* create view to document autocreate

* Fix navbar projects

* remove dropdown if empty

* split cluster and editor pages

* Fix dropdown navbar

* remove group dependency

* Update DocumentCreate view to use db defaults

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update document title and description

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* fix clusters page with groups

* Create dropdown

* Change icons

* Improve text editor styles

* Fix textarea

* Update title and description on "enter" keypress

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Refactor edtion methods

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add silegis-mg editor and contextualToolbar

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add initial functionalities to text-editor

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Initial contextual toolbox positioning

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix error on toolbar click

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Show/hide  toolbar on focus

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update page title when change document title

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add new editor-articulacao version

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix toolbar hide

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix toolbar positioning

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Add keyboard default behavior

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update keyboard behavior on editor

Si

--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "lint": "eslint src/static/js/**/*"
   },
+  "eslintIgnore": [
+    "src/static/js/vendor/*"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^9.3.1",
+    "autosize": "^4.0.2",
     "eslint": "^5.9.0",
     "jquery": "^3.3.1",
     "jquery-ui-dist": "^1.12.1",
