--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "^7.0.5",
     "postcss-cli": "^6.0.1",
     "postcss-font-magician": "^2.2.1",
+    "slug": "^1.1.0",
     "tooltip.js": "^1.3.1"
   }
 }
