--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss-cli": "^6.0.1",
     "postcss-font-magician": "^2.2.1",
     "slug": "^1.1.0",
-    "tooltip.js": "^1.3.1"
+    "tooltip.js": "^1.3.1",
+    "truncate.js": "^1.1.2"
   }
 }
