add celery and celery beat to schedule tasks

--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ Django = "*"
 python-decouple = "*"
 django_compressor = "*"
 django-npm = "*"
-"flake8" = "*"
+flake8 = "*"
 coverage = "*"
 python-coveralls = "*"
 django-libsass = "*"
@@ -22,7 +22,7 @@ django-colorful = "*"
 django-constance = {extras = ["database"]}
 django-picklefield = "*"
 requests = "*"
-"psycopg2" = "*"
+psycopg2-binary = "*"
 gunicorn = "*"
 whitenoise = "*"
 roman = "*"
@@ -32,7 +32,10 @@ scikit-learn = "*"
 scipy = "*"
 kneed = "*"
 sklearn = "*"
-"beautifulsoup4" = "*"
+beautifulsoup4 = "*"
+celery = {extras = ["redis"]}
+django_celery_results = "*"
+django_celery_beat = "*"
 
 [dev-packages]
 ipdb = "*"
