--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,16 @@ services:
       POSTGRES_PASSWORD: wikilegis
       POSTGRES_DB: root
 
+  redis:
+    image: redis:alpine
+
   web:
     image: labhackercd/new-wikilegis:dev
     command: ./start.sh
     restart: on-failure
     links:
       - db
+      - redis
     volumes:
       - data:/var/labhacker/new-wikilegis
     environment:
@@ -39,10 +43,30 @@ services:
       COMPRESS_OFFLINE: 'True'
       SITE_DOMAIN: localhost:8000
       SITE_NAME: new-wikilegis
+      REDIS_SERVER: redis
     expose:
       - "8000"
     depends_on:
       - db
+      - redis
+
+  celery_worker:
+    build: .
+    command: celery -A proj worker -l info
+    volumes:
+      - data:/var/labhacker/new-wikilegis
+    depends_on:
+      - db
+      - redis
+
+  celery-beat:
+    build: .
+    command: celery -A proj beat -l info
+    volumes:
+      - data:/var/labhacker/new-wikilegis
+    depends_on:
+      - db
+      - redis
 
 volumes:
   data:
