add env variables in celery worker and celery beat

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,12 @@ services:
       COMPRESS_OFFLINE: 'True'
       SITE_DOMAIN: localhost:8000
       SITE_NAME: new-wikilegis
-      REDIS_SERVER: redis://redis:6379
+      REDIS_SERVER: redis
+      FORCE_SCRIPT_NAME: ''
+      STATIC_URL: /static/
+      MEDIA_URL: /media/
+      EMAIL_BACKEND: django.core.mail.backends.console.EmailBackend
+      ENABLE_REMOTE_USER: 'False'
     expose:
       - "8000"
     depends_on:
@@ -58,15 +63,34 @@ services:
     depends_on:
       - db
       - redis
+      - web
+    environment:
+      DEBUG: 'False'
+      DATABASE_ENGINE: postgresql_psycopg2
+      DATABASE_NAME: wikilegis
+      DATABASE_PASSWORD: wikilegis
+      DATABASE_USER: root
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
+      REDIS_SERVER: redis://redis:6379/0
 
   celery-beat:
     build: .
-    command: bash -c "cd src && celery -A wikilegis beat -l info"
+    command: bash -c "cd src && celery -A wikilegis beat -l info --pidfile=/tmp/celeryd.pid"
     volumes:
       - data:/var/labhacker/new-wikilegis
     depends_on:
       - db
       - redis
+    environment:
+      DEBUG: 'False'
+      DATABASE_ENGINE: postgresql_psycopg2
+      DATABASE_NAME: wikilegis
+      DATABASE_PASSWORD: wikilegis
+      DATABASE_USER: root
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
+      REDIS_SERVER: redis://redis:6379/0
 
 volumes:
   data:
