--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     image: redis:alpine
 
   web:
-    image: labhackercd/new-wikilegis:dev
+    build: .
     command: ./start.sh
     restart: on-failure
     links:
@@ -44,6 +44,11 @@ services:
       SITE_DOMAIN: localhost:8000
       SITE_NAME: new-wikilegis
       REDIS_SERVER: redis
+      FORCE_SCRIPT_NAME: ''
+      STATIC_URL: /static/
+      MEDIA_URL: /media/
+      EMAIL_BACKEND: django.core.mail.backends.console.EmailBackend
+      ENABLE_REMOTE_USER: 'False'
     expose:
       - "8000"
     depends_on:
@@ -52,21 +57,41 @@ services:
 
   celery_worker:
     build: .
-    command: celery -A proj worker -l info
+    command: bash -c "cd src && celery -A wikilegis worker -l info"
     volumes:
       - data:/var/labhacker/new-wikilegis
     depends_on:
       - db
       - redis
+    environment:
+      DEBUG: 'False'
+      DATABASE_ENGINE: postgresql_psycopg2
+      DATABASE_NAME: wikilegis
+      DATABASE_PASSWORD: wikilegis
+      DATABASE_USER: root
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
+      REDIS_SERVER: redis://redis:6379/0
 
   celery-beat:
     build: .
-    command: celery -A proj beat -l info
+    command: bash -c "cd src && celery -A wikilegis beat -l info --pidfile="
+    restart: on-failure
     volumes:
       - data:/var/labhacker/new-wikilegis
     depends_on:
       - db
       - redis
+      - web
+    environment:
+      DEBUG: 'False'
+      DATABASE_ENGINE: postgresql_psycopg2
+      DATABASE_NAME: wikilegis
+      DATABASE_PASSWORD: wikilegis
+      DATABASE_USER: root
+      DATABASE_HOST: db
+      DATABASE_PORT: 5432
+      REDIS_SERVER: redis://redis:6379/0
 
 volumes:
   data:
