--- a/Pipfile
+++ b/Pipfile
@@ -31,6 +31,8 @@ celery = {extras = ["redis"]}
 django_celery_results = "*"
 django_celery_beat = "*"
 diff-match-patch = "*"
+graphene-django = "*"
+django-graphql-jwt = "*"
 
 [dev-packages]
 ipdb = "*"
