--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-Django = "==2.2.10"
+Django = "==2.2.19"
 python-decouple = "*"
 django_compressor = "*"
 django-npm = "*"
@@ -34,6 +34,10 @@ diff-match-patch = "*"
 django-cors-headers = "*"
 graphene-django = "*"
 django-graphql-jwt = "*"
+pytest-django = "==4.1.0"
+pytest-cov = "==2.11.1"
+mixer = "==6.3.0"
+drf-yasg = "==1.20.0"
 
 [dev-packages]
 ipdb = "*"
