--- a/Pipfile
+++ b/Pipfile
@@ -5,35 +5,35 @@ name = "pypi"
 
 [packages]
 Django = "==2.2.19"
-python-decouple = "*"
-django_compressor = "*"
-django-npm = "*"
-flake8 = "*"
-coverage = "*"
-python-coveralls = "*"
-django-libsass = "*"
-django-compressor-postcss = "*"
-django-extensions = "*"
-djangorestframework = "*"
-django-filter = "*"
-django-compressor-toolkit = "*"
-django-js-reverse = "*"
-django-colorful = "*"
-django-constance = {extras = ["database"]}
-django-picklefield = "*"
-requests = "*"
-psycopg2-binary = "*"
-gunicorn = "*"
-whitenoise = "*"
-roman = "*"
-beautifulsoup4 = "*"
-celery = {extras = ["redis"]}
-django_celery_results = "*"
-django_celery_beat = "*"
-diff-match-patch = "*"
-django-cors-headers = "*"
-graphene-django = "*"
-django-graphql-jwt = "*"
+python-decouple = "==3.4"
+django_compressor = "==2.4"
+django-npm = "==1.0.0"
+flake8 = "==3.9.0"
+coverage = "==5.5"
+python-coveralls = "==2.9.3"
+django-libsass = "==0.8"
+django-compressor-postcss = "==0.8.2"
+django-extensions = "==3.1.1"
+djangorestframework = "==3.12.2"
+django-filter = "==2.4.0"
+django-compressor-toolkit = "==0.6.0"
+django-js-reverse = "==0.9.1"
+django-colorful = "==1.3"
+django-constance = {version = "==2.8.0", extras = ["database"]}
+django-picklefield = "==3.0.1"
+requests = "==2.25.1"
+psycopg2-binary = "==2.8.6"
+gunicorn = "==20.1.0"
+whitenoise = "==5.2.0"
+roman = "==3.3"
+beautifulsoup4 = "==4.9.3"
+celery = {version = "==5.0.5", extras = ["redis"]}
+django_celery_results = "==2.0.1"
+django_celery_beat = "==2.2.0"
+diff-match-patch = "==20200713"
+django-cors-headers = "==3.7.0"
+graphene-django = "==2.15.0"
+django-graphql-jwt = "==0.3.1"
 pytest-django = "==4.1.0"
 pytest-cov = "==2.11.1"
 mixer = "==6.3.0"
